2004-11-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/v4l.c: 64 bit fix from Frank Zago <fzago at austin dot
	  rr dot com>.

2004-11-13  Julien Blache <jb@jblache.org>
	* tools/hotplug/libsane.usermap: Added Epson Stylus Photo RX500,
	Epson Stylus Photo RX600 and Minolta Scan Dual II.

2004-11-10  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* snapscan-sources.c: First implementation of deinterlacer for epson
	  scanners at high resolutions (thanks to Brad Johnson)

2004-11-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in: Updated version. Enabled compilation
	  warnings.
	* doc/releases.txt: Updated according to current practice.

Older entries can be found in ChangeLog-1.0.15.